# rust-snippets

./: README.md
read-chain-data/: Cargo.toml
read-chain-data/src/: main.rs
read-contract-data/: .env.example  Cargo.toml
read-contract-data/src/: main.rs
read-from-contract/: Cargo.toml
read-from-contract/src/: main.rs
