[package]
name = "read-contract-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
ethers = { version = "2.0.14", features = ["legacy"]}
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
